# Water-monitoring-system

./: .gitignore  README.md
Diagrams/: DiagramOfClasses.drawio
MS_Client/: CMakeLists.txt  MS_Client_ru_RU.ts
MS_Client/Languages/: MS_Client_ru_RU.ts
MS_Client/MS_Client/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
MS_Client/MS_Client/Components/: ConfigComponent.cpp  ConfigComponent.h  LanguageComponent.cpp  LanguageComponent.h  ProjectComponent.cpp  ProjectComponent.h  SocketComponent.cpp  SocketComponent.h
MS_Client/MS_Client/Components/ViewComponents/: MapViewComponent.cpp  MapViewComponent.h  PlotViewComponent.cpp  PlotViewComponent.h
MS_Client/MS_Client/Dialogs/UserDataHandler/: AccountCreationDlg.cpp  AccountCreationDlg.h  AccountCreationDlg.ui  UserLoginDlg.cpp  UserLoginDlg.h  UserLoginDlg.ui
MS_Client/MS_Client/Project/: IProject.h  Project.cpp  Project.h
MS_Client/MS_Client/VesselAPI/: NMEA2000VesselAPI.cpp  NMEA2000VesselAPI.h  VesselAPI.h  VesselAPIFactory.cpp  VesselAPIFactory.h
MS_Client/QML/: Map.qml  Plot.qml
MS_Client/Resources/: MS_Client.rc
MS_Server/: CMakeLists.txt
MS_Server/MS_Server/: Server.cpp  Server.h  main.cpp
